Corrected cropping for Landingpage background for bottom

--- a/css/layout.css
+++ b/css/layout.css
@@ -26,7 +26,7 @@ header {
    height: 800px;
    min-height: 500px;
    width: 100%;
-   background: #161415 url(../images/header-background.jpg) no-repeat top center;
+   background: #161415 url(../images/header-background.jpg) no-repeat bottom center;
    background-attachment: fixed;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
